devel
-----

* Simplify the tagging of EnumerateCollectionNodes and IndexNodes with the
  "read-own-writes" flag. Previously the tagging only happened after all query
  optimizations were completed, making the tag unavailable to the optimizer.
  Now the tag is set early on, so it is accessible by the query optimizer.

* Make the `--version` and `--version-json` commands usable in arangobackup
  when no positional argument (operation type) was specified. Previously,
  arangobackup insisted on specifying the operation type alongside the
  `--version` or `--version-json` commands.

* Removed the following deprecated arangobench testcases:
  * aqltrx
  * aqlv8
  * counttrx
  * deadlocktrx
  * multi-collection
  * multitrx
  * random-shapes
  * shapes
  * shapes-append
  * skiplist
  * stream-cursor

* Renamed arangobench testcase "hash" to "persistent-index".

* Fixed an issue in old incremental sync protocol with document keys that
  contained special characters (`%`). These keys could be send unencoded in
  the incremental sync protocol, leading to wrong key ranges being transfered
  between leader and follower, and thus causing follow-up errors and preventing
  getting in sync.

* APM-209: Histogram displaying is now switched off by default. For displaying
  it, the new flag `histogram.generate` must be set to true. Its default value
  is false for compatibility with other versions and also for complying with the
  histogram not being displayed by default. If this flag is not set to true, but
  other histogram flags are addressed, e.g. `--histogram.interval-size 500`,
  everything will still run normally, but a warning message will be displayed
  saying that the histogram is switched off and setting this flag would not be
  of use. When the flag is set to true, the histogram is displayed before the
  summary in the output.

* Extend Windows minidumps with memory regions referenced from CPU registers or